--- a/index.html
+++ b/index.html
@@ -163,6 +163,25 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-sm d-flex justify-content-center">
+                        <div class="card fce4ec ffe0b2 orange lighten-4" style="width: 25rem;">
+                            <a href="https://huffpostscraper.herokuapp.com/"><img src="/Portfolio2/images/scraper.jpg"
+                                    class="card-img-top card-link" alt="..." height="250px" width="100px"></a>
+                            <div class="card-body">
+                                <p class="card-text text-center"><b>MongoScraper</b><br>A tool used to scrape HuffPost's main site with Express, cheerio, and handlebars.</p>
+                            </div>
+                        </div>
+                        <!-- <div class="card fce4ec ffe0b2 orange lighten-4" style="width: 25rem;">
+                            <a href="https://eilsul10.github.io/GifTastic/"><img src="/Portfolio2/images/WCUM0RqH_400x400.jpg"
+                                    class="card-img-top card-link" alt="..." height="250px" width="100px"></a>
+                            <div class="card-body">
+                                <p class="card-text text-center"><b>GifTastic</b><br>Utilized GIPHY API to create dynamic
+                                    webpage that populates GIFs of the user's choice.</p>
+                            </div>
+                        </div> -->
+                    </div>
+                </div>
 
         </div>
     </div>
