fixed icon images and arrangement

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="/Portfolio2/materialize/css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="/materialize/css/materialize.min.css"  media="screen,projection"/>
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -29,7 +29,7 @@
             <h1 class="display-4 mx-auto text-center" style="width: 500px;"><b>Eileen Sul</b></h1>
             <h1 class="display-4 mx-auto text-center" style="width: 500px; margin-top: 0px">Full-Stack Developer</h1>
             <p class="lead mx-auto text-center" style="width: 300px;"><b>On a mission to improve the world.</b></p>
-            <img src="/Portfolio2/images/21273354_10202242253035168_1512358263956807097_o (1).jpg" alt="..."
+            <img src="images/21273354_10202242253035168_1512358263956807097_o (1).jpg" alt="..."
                 class="mx-auto d-block img-thumbnail rounded w-25">
             <!-- <hr class="my-4"> -->
         </div>
@@ -54,10 +54,10 @@
                     <li class="collection-item h5 fce4ec ffe0b2 orange lighten-4"><b>Design-Tools</b><br>
                         Balsamiq<br>
                         Bootstrap<br>
+                        Materialize<br>
                     </li>
                     <li class="collection-item h5 fce4ec ffe0b2 orange lighten-4"><b>Currently Learning</b><br>
                         Sass<br>
-                        Materialize<br><br><br><br><br><br>
                     </li>
                 </ul>
             </div>
@@ -102,7 +102,7 @@
             <div class="col-sm d-flex justify-content-center">
                 <div class="card fce4ec ffe0b2 orange lighten-4" style="width: 25rem;">
                     <a href="https://jldwyer25.github.io/ProjectUno/"><img
-                            src="/Portfolio2/images/animal-cat-cute-46024.jpg" class="card-img-top card-link" alt="..."
+                            src="images/animal-cat-cute-46024.jpg" class="card-img-top card-link" alt="..."
                             height="250px" width="100px"></a>
                     <div class="card-body">
                         <p class="card-text text-center"><b>Fetchbook</b><br>Utilized Amazon and PetFinder API's to help
@@ -111,7 +111,7 @@
                 </div>
                 <div class="card fce4ec ffe0b2 orange lighten-4" style="width: 25rem;">
                     <a href="https://eilsul10.github.io/Psychic-Game/"><img
-                            src="/Portfolio2/images/psychic-672x372 (1).jpg" class="card-img-top card-link" alt="..."
+                            src="images/psychic-672x372 (1).jpg" class="card-img-top card-link" alt="..."
                             height="250px" width="100px"></a>
                     <div class="card-body">
                         <p class="card-text text-center"><b>Psychic Game</b><br>Javascript based random letter guessing
@@ -124,17 +124,24 @@
             <div class="row">
                 <div class="col-sm d-flex justify-content-center">
                     <div class="card fce4ec ffe0b2 orange lighten-4" style="width: 25rem;">
-                        <a href="https://github.com/eilsul10/12-bamazon"><img
-                                src="/Portfolio2/images/photo-1528698827591-e19ccd7bc23d.jpg"
+                        <!-- <a href="https://github.com/eilsul10/12-bamazon"><img
+                                src="images/photo-1528698827591-e19ccd7bc23d.jpg"
                                 class="card-img-top card-link" alt="..." height="250px" width="100px"></a>
                         <div class="card-body">
                             <p class="card-text text-center"><b>Bamazon</b><br>Utilized Node.js with SQL, inquirer and
                                 console.table dependencies to create a server side storefront similar to Amazon.</p>
+                        </div> -->
+                        <div class="card fce4ec ffe0b2 orange lighten-4" style="width: 25rem;">
+                            <a href="https://huffpostscraper.herokuapp.com/"><img src="images/scraper.jpg"
+                                    class="card-img-top card-link" alt="..." height="250px" width="100px"></a>
+                            <div class="card-body">
+                                <p class="card-text text-center"><b>MongoScraper</b><br>A tool used to scrape HuffPost's main site with Express, cheerio, and handlebars.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="card fce4ec ffe0b2 orange lighten-4" style="width: 25rem;">
                         <a href="https://eilsul10.github.io/TrainActivity1/"><img
-                                src="/Portfolio2/images/Coradia_iLint_Hydrogen_Train_XL_721_420_80_s_c1.jpg"
+                                src="images/Coradia_iLint_Hydrogen_Train_XL_721_420_80_s_c1.jpg"
                                 class="card-img-top card-link" alt="..." height="250px" width="100px"></a>
                         <div class="card-body">
                             <p class="card-text text-center"><b>Train Activity</b><br>Created a train schedule
@@ -146,7 +153,7 @@
             <div class="row">
                     <div class="col-sm d-flex justify-content-center">
                         <div class="card fce4ec ffe0b2 orange lighten-4" style="width: 25rem;">
-                            <a href="https://eilsul10.github.io/unit-4-game/"><img src="/Portfolio2/images/surprisinghi.jpg"
+                            <a href="https://eilsul10.github.io/unit-4-game/"><img src="images/surprisinghi.jpg"
                                     class="card-img-top card-link" alt="..." height="250px" width="100px"></a>
                             <div class="card-body">
                                 <p class="card-text text-center"><b>Crystals Collector</b><br>jQuery based game to match your
@@ -154,7 +161,7 @@
                             </div>
                         </div>
                         <div class="card fce4ec ffe0b2 orange lighten-4" style="width: 25rem;">
-                            <a href="https://eilsul10.github.io/GifTastic/"><img src="/Portfolio2/images/WCUM0RqH_400x400.jpg"
+                            <a href="https://eilsul10.github.io/GifTastic/"><img src="images/WCUM0RqH_400x400.jpg"
                                     class="card-img-top card-link" alt="..." height="250px" width="100px"></a>
                             <div class="card-body">
                                 <p class="card-text text-center"><b>GifTastic</b><br>Utilized GIPHY API to create dynamic
@@ -163,25 +170,25 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col-sm d-flex justify-content-center">
-                        <div class="card fce4ec ffe0b2 orange lighten-4" style="width: 25rem;">
-                            <a href="https://huffpostscraper.herokuapp.com/"><img src="/Portfolio2/images/scraper.jpg"
+                        <!-- <div class="card fce4ec ffe0b2 orange lighten-4" style="width: 25rem;">
+                            <a href="https://huffpostscraper.herokuapp.com/"><img src="images/scraper.jpg"
                                     class="card-img-top card-link" alt="..." height="250px" width="100px"></a>
                             <div class="card-body">
                                 <p class="card-text text-center"><b>MongoScraper</b><br>A tool used to scrape HuffPost's main site with Express, cheerio, and handlebars.</p>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- <div class="card fce4ec ffe0b2 orange lighten-4" style="width: 25rem;">
-                            <a href="https://eilsul10.github.io/GifTastic/"><img src="/Portfolio2/images/WCUM0RqH_400x400.jpg"
+                            <a href="https://eilsul10.github.io/GifTastic/"><img src="images/WCUM0RqH_400x400.jpg"
                                     class="card-img-top card-link" alt="..." height="250px" width="100px"></a>
                             <div class="card-body">
                                 <p class="card-text text-center"><b>GifTastic</b><br>Utilized GIPHY API to create dynamic
                                     webpage that populates GIFs of the user's choice.</p>
                             </div>
                         </div> -->
-                    </div>
-                </div>
+                    <!-- </div>
+                </div> -->
 
         </div>
     </div>
@@ -192,8 +199,8 @@
     <div class="container-fluid text-center" style="background: #FFEDBC">
         <div class="row">
             <div class="col text-center">
-                <h3 class="text-center">About Eileen</h3><br>
-                <img src="/Portfolio2/images/Lucy.jpg" alt="..."
+                <h3 class="text-center">About Eileen Sul</h3><br>
+                <img src="images/Lucy.jpg" alt="..."
                 class="mx-auto d-block rounded w-25">
                 <br>
                 <h4>Hello! I am a 26 year old full stack developer from Evanston, IL who graduated from
@@ -228,7 +235,7 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-    <script type="text/javascript" src="/Portfolio2/materialize/js/materialize.min.js"></script>
+    <script type="text/javascript" src="/materialize/js/materialize.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
