--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans&display=swap" rel="stylesheet">
+
+
 </head>
 
 <body style="background: #FFEDBC">
@@ -34,7 +38,7 @@
             <!-- <hr class="my-4"> -->
         </div>
     </div>
-    <br><br><br><br>
+    <br><br><br><br><br>
     <!-- Intro & Roles: Front-End Developer, Back-End Developer, Advocate -->
     <!-- List group, card,  -->
     <div class="container-fluid">
@@ -123,7 +127,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm d-flex justify-content-center">
-                    <div class="card fce4ec ffe0b2 orange lighten-4" style="width: 25rem;">
+                    <!-- <div class="card fce4ec ffe0b2 orange lighten-4" style="width: 25rem;"> -->
                         <!-- <a href="https://github.com/eilsul10/12-bamazon"><img
                                 src="images/photo-1528698827591-e19ccd7bc23d.jpg"
                                 class="card-img-top card-link" alt="..." height="250px" width="100px"></a>
@@ -138,7 +142,7 @@
                                 <p class="card-text text-center"><b>MongoScraper</b><br>A tool used to scrape HuffPost's main site with Express, cheerio, and handlebars.</p>
                             </div>
                         </div>
-                    </div>
+                    <!-- </div> -->
                     <div class="card fce4ec ffe0b2 orange lighten-4" style="width: 25rem;">
                         <a href="https://eilsul10.github.io/TrainActivity1/"><img
                                 src="images/Coradia_iLint_Hydrogen_Train_XL_721_420_80_s_c1.jpg"
@@ -199,11 +203,11 @@
     <div class="container-fluid text-center" style="background: #FFEDBC">
         <div class="row">
             <div class="col text-center">
-                <h3 class="text-center">About Eileen Sul</h3><br>
+                <h3 class="text-center" font-family= "'Fira Sans', sans-serif";>About Eileen Sul</h3><br>
                 <img src="images/Lucy.jpg" alt="..."
                 class="mx-auto d-block rounded w-25">
                 <br>
-                <h4>Hello! I am a 26 year old full stack developer from Evanston, IL who graduated from
+                <h4 font-family= "'Fira Sans', sans-serif">Hello! I am a 27 year old front end developer from Evanston, IL. I graduated with my bachelor's from
                     University of Illinois at Urbana Champaign in 2013.
                     <br>
                     I'd like to use my programming abilities to better the world whether it be through business or a
