--- a/index.html
+++ b/index.html
@@ -114,6 +114,16 @@
                     </div>
                 </div>
                 <div class="card fce4ec ffe0b2 orange lighten-4" style="width: 25rem;">
+                    <a href="https://seniornextdoor-live1.herokuapp.com/"><img
+                            src="images/Family-Silhouette_2.jpg" class="card-img-top card-link" alt="..."
+                            height="250px" width="100px"></a>
+                    <div class="card-body">
+                        <p class="card-text text-center"><b>SeniorNextDoor</b><br>Fullstack MERN(MongoDB, Express, ReactJS, NodeJS)
+                        volunteer app that assists elderly people with their daily needs.</p>
+                    </div>
+                </div>
+
+                <!-- <div class="card fce4ec ffe0b2 orange lighten-4" style="width: 25rem;">
                     <a href="https://eilsul10.github.io/Psychic-Game/"><img
                             src="images/psychic-672x372 (1).jpg" class="card-img-top card-link" alt="..."
                             height="250px" width="100px"></a>
@@ -121,7 +131,7 @@
                         <p class="card-text text-center"><b>Psychic Game</b><br>Javascript based random letter guessing
                             game player vs. the computer.</p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="container-fluid">
