Updates to font style and title

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="jumbotron" style="background: linear-gradient(to bottom, #de6262, #FFEDBC)">
 
             <h1 class="display-4 mx-auto text-center" style="width: 500px;"><b>Eileen Sul</b></h1>
-            <h1 class="display-4 mx-auto text-center" style="width: 500px; margin-top: 0px">Full-Stack Developer</h1>
+            <h1 class="display-4 mx-auto text-center" style="width: 500px; margin-top: 0px">Front-end Developer</h1>
             <p class="lead mx-auto text-center" style="width: 300px;"><b>On a mission to improve the world.</b></p>
             <img src="images/21273354_10202242253035168_1512358263956807097_o (1).jpg" alt="..."
                 class="mx-auto d-block img-thumbnail rounded w-25">
@@ -213,11 +213,11 @@
     <div class="container-fluid text-center" style="background: #FFEDBC">
         <div class="row">
             <div class="col text-center">
-                <h3 class="text-center" font-family= "'Fira Sans', sans-serif";>About Eileen Sul</h3><br>
+                <h3 class="text-center" font-family= "'Fira Sans', sans-serif";>About Me</h3><br>
                 <img src="images/Lucy.jpg" alt="..."
                 class="mx-auto d-block rounded w-25">
                 <br>
-                <h4 font-family= "'Fira Sans', sans-serif">Hello! I am a 27 year old front end developer from Evanston, IL. I graduated with my bachelor's from
+                <h4 font-family= "'Fira Sans', sans-serif" style="font-size:20px;">Hello! I am a 27 year old front end developer from Evanston, IL. I graduated with my bachelor's from
                     University of Illinois at Urbana Champaign in 2013.
                     <br>
                     I'd like to use my programming abilities to better the world whether it be through business or a
