--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="jumbotron" style="background: linear-gradient(to bottom, #de6262, #FFEDBC)">
 
             <h1 class="display-4 mx-auto text-center" style="width: 500px;"><b>Eileen Sul</b></h1>
-            <h1 class="display-4 mx-auto text-center" style="width: 500px; margin-top: 0px">Front-end Developer</h1>
+            <h1 class="display-4 mx-auto text-center" style="width: 500px; margin-top: 0px">Front-End Developer</h1>
             <p class="lead mx-auto text-center" style="width: 300px;"><b>On a mission to improve the world.</b></p>
             <img src="images/21273354_10202242253035168_1512358263956807097_o (1).jpg" alt="..."
                 class="mx-auto d-block img-thumbnail rounded w-25">
